[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
regex = { version = "1.11.1", features = ["use_std"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "tls-native-tls"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = "0.3.19"
